--- a/apps/docs/src/pages/components/dropdown-menu.mdx
+++ b/apps/docs/src/pages/components/dropdown-menu.mdx
@@ -73,7 +73,7 @@ export default function Demo() {
   const [open, setOpen] = useState(false);
 
   return (
-    <div style={{ display: "flex", gap: 5 }}>
+    <div className="flex gap-xs">
       <HvButton variant="secondaryGhost" onClick={() => setOpen(!open)}>
         {`Click to ${!open ? "Open" : "Close"}`}
       </HvButton>
