--- a/apps/docs/src/pages/components/empty-state.mdx
+++ b/apps/docs/src/pages/components/empty-state.mdx
@@ -44,7 +44,7 @@ You can specify any content as the `message` or `action`. This can be a button, 
   title="No visualization data available"
   icon={<BarChart />}
   action={
-    <div className="flex flex-col gap-1 items-center">
+    <div className="flex flex-col gap-xs items-center">
       <HvButton variant="secondarySubtle">Upload data</HvButton>
       <HvTypography link component="a" href="#">
         Back to homepage
