--- a/apps/docs/src/pages/components/grid.mdx
+++ b/apps/docs/src/pages/components/grid.mdx
@@ -39,7 +39,6 @@ export default function Demo() {
         <HvGrid item xs={12} lg={6}>
           <HvPanel className="content-center h-100px">xs=12 lg=6</HvPanel>
         </HvGrid>
-
         <HvGrid item xs={12} md={6} lg={4}>
           <HvPanel className="content-center h-100px">xs=12 md=6 lg=4</HvPanel>
         </HvGrid>
@@ -49,10 +48,9 @@ export default function Demo() {
         <HvGrid item xs={12} md={6} lg={4}>
           <HvPanel className="content-center h-100px">xs=12 md=6 lg=4</HvPanel>
         </HvGrid>
-
-        <HvGrid item xs={12} sm={6} md={4} lg={3} xl={2}>
+        <HvGrid item xs={12} sm={6} lg={3} xl={2}>
           <HvPanel className="content-center h-100px">
-            xs=12 sm=6 md=4 lg=3 xl=2
+            xs=12 sm=6 lg=3 xl=2
           </HvPanel>
         </HvGrid>
         <HvGrid item xs={12} sm={6} md={4} lg={3} xl={2}>
