--- a/apps/docs/src/pages/components/section.mdx
+++ b/apps/docs/src/pages/components/section.mdx
@@ -64,7 +64,7 @@ export default function Demo() {
   const [expanded, setExpanded] = useState(false);
 
   return (
-    <div className="grid gap-2 w-full">
+    <div className="grid gap-sm w-full">
       <HvButton className="w-1/4" onClick={() => setExpanded((p) => !p)}>
         Expand
       </HvButton>
