--- a/apps/docs/src/pages/components/skeleton.mdx
+++ b/apps/docs/src/pages/components/skeleton.mdx
@@ -40,7 +40,7 @@ export const getStaticProps = async ({ params }) => {
 If you pass no `width` or `height` props, the skeleton will adapt to the content size.
 
 ```tsx live
-<div className="flex flex-col gap-1">
+<div className="flex flex-col gap-xs">
   <HvSkeleton variant="circle">
     <HvAvatar alt="Beatrice" src="https://i.imgur.com/bE7vg3N.png" size="md" />
   </HvSkeleton>
