--- a/apps/docs/src/pages/components/toggle-button.mdx
+++ b/apps/docs/src/pages/components/toggle-button.mdx
@@ -16,14 +16,10 @@ export const getStaticProps = async ({ params }) => {
   Component={HvToggleButton}
   componentName="HvToggleButton"
   controls={{
-    selected: {
-      defaultValue: false,
-    },
-    disabled: {
-      defaultValue: false,
-    },
+    disabled: { defaultValue: false },
   }}
   componentProps={{
+    defaultSelected: false,
     notSelectedIcon: <Favorite />,
     selectedIcon: <FavoriteSelected />,
   }}
