--- a/apps/docs/src/pages/components/avatar.mdx
+++ b/apps/docs/src/pages/components/avatar.mdx
@@ -39,12 +39,12 @@ export const getStaticProps = async ({ params }) => {
 Image avatars can be created by passing the src or srcSet props to the component.
 
 ```tsx live
-<>
+<div className="flex gap-xs">
   <HvAvatar alt="Ben" src="https://i.imgur.com/56Eeg1g.png" />
   <HvAvatar alt="Beatrice" src="https://i.imgur.com/bE7vg3N.png" />
   <HvAvatar alt="Wayne" src="https://i.imgur.com/ea22egF.png" />
   <HvAvatar alt="Clara Soul" src="https://i.imgur.com/6sYhSb6.png" />
-</>
+</div>
 ```
 
 ### Letter Avatars
@@ -52,11 +52,11 @@ Image avatars can be created by passing the src or srcSet props to the component
 Avatars containing simple characters can be created by passing a string as children.
 
 ```tsx live
-<>
+<div className="flex gap-xs">
   <HvAvatar>BM</HvAvatar>
   <HvAvatar backgroundColor="sema19">W</HvAvatar>
   <HvAvatar backgroundColor="sema6">CS</HvAvatar>
-</>
+</div>
 ```
 
 ### Icon Avatars
@@ -64,20 +64,20 @@ Avatars containing simple characters can be created by passing a string as child
 Icon avatars are created by passing an icon as children. Its size and color aren't Avatar's responsibility.
 
 ```tsx live
-<>
+<div className="flex gap-xs">
   <HvAvatar>
-    <LogIn color="atmo1" iconSize="XS" />
+    <LogIn color="atmo1" size="XS" />
   </HvAvatar>
   <HvAvatar backgroundColor="positive">
-    <Archives color="atmo1" iconSize="XS" />
+    <Archives color="atmo1" size="XS" />
   </HvAvatar>
   <HvAvatar backgroundColor="neutral">
-    <Search color="atmo1" iconSize="XS" />
+    <Search color="atmo1" size="XS" />
   </HvAvatar>
   <HvAvatar backgroundColor="warning">
-    <Bookmark color="atmo1" iconSize="XS" />
+    <Bookmark color="atmo1" size="XS" />
   </HvAvatar>
-</>
+</div>
 ```
 
 ### Fallbacks
@@ -85,28 +85,28 @@ Icon avatars are created by passing an icon as children. Its size and color aren
 If there is an error loading the avatar image, the component falls back to an alternative in the following order: the provided children, the first letter of the alt text and finally the generic User icon.
 
 ```tsx live
-<>
+<div className="flex gap-xs">
   <HvAvatar alt="Clara Soul" src="/broken-image.jpg">
     CS
   </HvAvatar>
   <HvAvatar alt="Clara Soul" src="/broken-image.jpg" />
   <HvAvatar src="/broken-image.jpg" />
-</>
+</div>
 ```
 
 ### Variants
 
-You can configure the `size` and `variant` of an avatar. When using an icon, set its `iconSize` to the size immediately below the avatar size.
+You can configure the `size` and `variant` of an avatar. When using an icon, set its `size` to the size immediately below the avatar size.
 
 ```tsx live
-<>
+<div className="flex gap-xs">
   <HvAvatar size="xs" />
   <HvAvatar size="xs" variant="square" />
   <HvAvatar backgroundColor="sema6" size="sm">
     NA
   </HvAvatar>
   <HvAvatar size="lg" backgroundColor="warning">
-    <Bookmark iconSize="M" color={["base_light", "base_dark"]} />
+    <Bookmark size="M" color={["base_light", "base_dark"]} />
   </HvAvatar>
   <HvAvatar size="xl" alt="Beatrice" src="https://i.imgur.com/bE7vg3N.png" />
   <HvAvatar
@@ -115,7 +115,7 @@ You can configure the `size` and `variant` of an avatar. When using an icon, set
     alt="Beatrice"
     src="https://i.imgur.com/bE7vg3N.png"
   />
-</>
+</div>
 ```
 
 ### Status
@@ -123,7 +123,7 @@ You can configure the `size` and `variant` of an avatar. When using an icon, set
 An avatar can have a status, represented by either the status colored border or by the badge dot. The color can be from the theme palette or custom.
 
 ```tsx live
-<>
+<div className="flex gap-xs">
   <HvAvatar size="xs" status="positive">
     AB
   </HvAvatar>
@@ -139,7 +139,7 @@ An avatar can have a status, represented by either the status colored border or 
   <HvAvatar size="xl" status="#8CEB34" badge="#8CEB34">
     AB
   </HvAvatar>
-</>
+</div>
 ```
 
 ### Actions
@@ -147,32 +147,21 @@ An avatar can have a status, represented by either the status colored border or 
 An avatar should be interacted with by wrapping it in an interactable element, such as an `HvButton` or a link. Make sure the elements are labelled accordingly.
 
 ```tsx live
-<>
-  <HvButton
-    icon
-    overrideIconColors={false}
-    component="a"
-    href="#profile-url"
-    aria-label="External link"
-  >
+<div className="flex gap-xs">
+  <HvButton icon component="a" href="#profile-url" aria-label="External link">
     <HvAvatar size="md">
-      <Bookmark color="atmo1" />
+      <Bookmark />
     </HvAvatar>
   </HvButton>
-  <HvButton icon overrideIconColors={false} aria-label="Open the user profile">
+  <HvButton icon aria-label="Open the user profile">
     <HvAvatar size="md" />
   </HvButton>
-  <HvButton icon overrideIconColors={false} aria-label="Business Manager">
+  <HvButton icon aria-label="Business Manager">
     <HvAvatar backgroundColor="sema19" size="md" badge="negative">
       BM
     </HvAvatar>
   </HvButton>
-  <HvButton
-    icon
-    overrideIconColors={false}
-    aria-label="Business Manager"
-    radius="none"
-  >
+  <HvButton icon aria-label="Business Manager" radius="none">
     <HvAvatar
       backgroundColor="sema19"
       size="md"
@@ -182,7 +171,7 @@ An avatar should be interacted with by wrapping it in an interactable element, s
       BM
     </HvAvatar>
   </HvButton>
-  <HvButton icon overrideIconColors={false} aria-label="Clara Soul profile">
+  <HvButton icon aria-label="Clara Soul profile">
     <HvAvatar
       alt="Clara Soul"
       src="https://i.imgur.com/6sYhSb6.png"
@@ -190,12 +179,7 @@ An avatar should be interacted with by wrapping it in an interactable element, s
       status="positive"
     />
   </HvButton>
-  <HvButton
-    icon
-    overrideIconColors={false}
-    aria-label="Clara Soul profile"
-    radius="none"
-  >
+  <HvButton icon aria-label="Clara Soul profile" radius="none">
     <HvAvatar
       alt="Clara Soul"
       src="https://i.imgur.com/6sYhSb6.png"
@@ -204,5 +188,5 @@ An avatar should be interacted with by wrapping it in an interactable element, s
       status="positive"
     />
   </HvButton>
-</>
+</div>
 ```
