--- a/apps/docs/src/pages/components/banner.mdx
+++ b/apps/docs/src/pages/components/banner.mdx
@@ -17,18 +17,12 @@ export const getStaticProps = async ({ params }) => {
   Component={HvBanner}
   componentName="HvBanner"
   controls={{
-    label: {
-      defaultValue: "This is an informational message.",
-    },
-    variant: {
-      defaultValue: "default",
-    },
-    showIcon: {
-      defaultValue: true,
-    },
+    label: { defaultValue: "This is a success message." },
+    variant: { defaultValue: "success" },
+    showIcon: { defaultValue: true },
+    open: { defaultValue: true },
   }}
   componentProps={{
-    open: true,
     style: { position: "relative", top: 0 },
   }}
 />
@@ -43,12 +37,12 @@ You can add a set of actions to the banner by specifying the `actions` prop. The
   offset={0}
   label="This is a banner."
   showIcon
+  className="relative"
   actions={[
     { id: "action_1", label: "Action 1", disabled: false },
     { id: "action_2", label: "Action 2", disabled: false },
   ]}
   onAction={(event, action) => console.log("Clicked", action)}
-  style={{ position: "relative", top: 0 }}
 />
 ```
 
@@ -61,8 +55,8 @@ You can pass a custom icon to the banner by using the `customIcon` prop.
   open
   offset={0}
   label="This is a banner with a custom icon."
+  className="relative"
   customIcon={<LightOn color="base_dark" />}
-  style={{ position: "relative", top: 0 }}
 />
 ```
 
@@ -73,15 +67,26 @@ Controlled banner. Click the buttons to display different banners.
 ```tsx live
 import { useState } from "react";
 
-const SimpleBanner = ({ variant, ...others }: Omit<HvBannerProps, "open">) => {
+export default function Demo() {
+  return (
+    <div className="flex gap-sm">
+      <BannerButton variant="default" label="This is a banner." />
+      <BannerButton variant="success" label="This is a success banner." />
+      <BannerButton variant="warning" label="This is a warning banner." />
+      <BannerButton variant="error" label="This is an error banner." />
+    </div>
+  );
+}
+
+const BannerButton = ({ variant, ...others }: Omit<HvBannerProps, "open">) => {
   const [open, setOpen] = useState(false);
 
   return (
     <>
       <HvButton
         onClick={() => setOpen(true)}
-        color="primary"
-        style={{ width: "150px", textTransform: "capitalize", margin: 10 }}
+        variant={buttonVariantMap[variant]}
+        className="capitalize w-120px"
       >
         {variant}
       </HvButton>
@@ -105,13 +110,10 @@ const SimpleBanner = ({ variant, ...others }: Omit<HvBannerProps, "open">) => {
   );
 };
 
-export default function Demo() {
-  return (
-    <>
-      <SimpleBanner variant="default" label="This is a banner." />
-      <SimpleBanner variant="success" label="This is a success banner." />
-      <SimpleBanner variant="error" label="This is an error banner." />
-    </>
-  );
-}
+const buttonVariantMap = {
+  default: "secondarySubtle",
+  success: "positiveSubtle",
+  warning: "warningSubtle",
+  error: "negativeSubtle",
+};
 ```
