--- a/apps/docs/src/pages/components/carousel.mdx
+++ b/apps/docs/src/pages/components/carousel.mdx
@@ -47,17 +47,15 @@ The `thumbnailsPosition` prop allows you to set the position of the thumbnails, 
 ```tsx live
 export default function Demo() {
   return (
-    <HvCarousel renderThumbnail={renderThumbnail}>
+    <HvCarousel
+      renderThumbnail={(i) => <img src={images[i]} alt={`thumbnail ${i}`} />}
+    >
       {images.map((src, i) => (
-        <HvCarouselSlide key={src} src={src} alt={`image-${i}`} />
+        <HvCarouselSlide key={src} src={src} alt={`image ${i}`} />
       ))}
     </HvCarousel>
   );
 }
-
-const renderThumbnail = (i: number) => (
-  <img src={images[i]} alt={`thumbnail-${i}`} />
-);
 
 const images = [...Array(7).keys()].map(
   (i) => `https://lumada-design.github.io/assets/landscape${i + 1}.jpg`,
@@ -118,9 +116,9 @@ You can control the `HvCarousel`'s configuration via the `carouselOptions` prop.
 >
   {[...Array(7).keys()].map((i) => (
     <HvCarouselSlide
-      key={`https://lumada-design.github.io/assets/landscape${i + 1}.jpg`}
+      key={i}
       src={`https://lumada-design.github.io/assets/landscape${i + 1}.jpg`}
-      alt={`image-${i}`}
+      alt={`image ${i}`}
     />
   ))}
 </HvCarousel>
@@ -137,14 +135,11 @@ A Carousel supports any kind of content, not just images.
     .map((src, i) => (
       <HvCarouselSlide key={src} size="50%">
         <div style={{ position: "relative" }}>
-          <div className="absolute w-70% m-md p-xs bg-base_dark color-base_light bg-opacity-40">
-            <HvTypography
-              variant="title3"
-              style={{ color: theme.colors.base_light }}
-            >
+          <div className="absolute w-70% m-md p-xs bg-base_dark text-base_light bg-opacity-40">
+            <HvTypography className="text-inherit" variant="title3">
               Travel destination {i + 1}
             </HvTypography>
-            <HvTypography style={{ color: theme.colors.base_light }}>
+            <HvTypography className="text-inherit">
               Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
               eiusmod tempor incididunt ut labore et dolore magna aliqua.
             </HvTypography>
