--- a/apps/docs/src/pages/components/color-picker.mdx
+++ b/apps/docs/src/pages/components/color-picker.mdx
@@ -45,6 +45,7 @@ You can configure the following Color Picker regions:
   defaultValue="#F6941E"
   showCustomColors
   showSavedColors
+  className="w-fit"
   defaultSavedColorsValue={["#95A", "#E95", "#8BA", "#759"]}
   recommendedColors={["#F00", "#0F0", "#00F", "#FF0", "#0FF", "#F0F"]}
   recommendedColorsPosition="top"
